--- a/app/styles/molecules/_experience.scss
+++ b/app/styles/molecules/_experience.scss
@@ -1,14 +1,47 @@
 .experience {
-	background-color: $base-background-color;
-	@include box-shadow(inset 0 0 5px 1px $base-border-color);
-	border: 1px solid $base-border-color;
+	font-size: 1rem;
+	@include flip;
 
-	.content {
-		padding: 1rem;
+	.face {
+		@include border-radius($base-border-radius);
+		@include box-sizing(border-box);
+		background-color: $base-background-color;
+		border: $base-border;
+		text-align: center;
+
+		&.back {
+			padding: 2em;
+		}
 	}
-	img {
-		margin: -2rem 0;
-		border: 5px $base-border-style $base-border-color;
-		border-radius: $base-border-radius;
+	h2 {
+		padding: 2em;
+	}
+	.schools {
+		padding-top: 1em;
+
+		span {
+			@extend h2;
+			display: block;
+			padding: 0;
+		}
+	}
+	ul {
+		padding: 0;
+		margin: 0.5em 0;
+		overflow: hidden;
+		text-align: left;
+		display: inline-block;
+
+		li {
+			margin: 0.5em 0;
+			list-style-type: none;
+
+			&:before {
+				content: '♦';
+				font-size: 0.7em;
+				padding-right: 0.5em;
+				vertical-align: middle;
+			}
+		}
 	}
 }
