--- a/app/styles/molecules/_footer.scss
+++ b/app/styles/molecules/_footer.scss
@@ -1,11 +1,12 @@
 footer {
+	font-size: 1rem;
 	background-color: $base-background-color;
 	@include box-shadow(inset 0 0 5px 1px $base-border-color);
 	border: 1px solid $base-border-color;
 
 		#contact {
-			padding: 2rem;
+			padding: 2em;
 			text-align: center;
-			font-size: 2rem;
+			font-size: 2em;
 		}
 }
