--- a/app/styles/quarks/_headers.scss
+++ b/app/styles/quarks/_headers.scss
@@ -1,13 +1,29 @@
+.light-header {
+	color: $white;
+	text-shadow: 1px 1px 0px $dark-grey;
+}
+
+.fancy-header {
+	font-family: "Great Vibes", Helvetica Nueue, Helvetica, Arial, sans-serif;
+}
+
 h1, h2, h3, h4, h5, h6 {
+	line-height: 1em;
+	font-weight: 100;
 	margin: 0;
 }
 
 h1 {
-	text-align: center;
-	font-size: 5rem;
+	@extend .fancy-header;
+	@extend .light-header;
+	font-size: 5em;
 }
 
 h2 {
-	text-shadow: 1px 1px 0px #fff;
-	font-size: 2rem;
+	@extend .fancy-header;
+	font-size: 3em;
+}
+
+h3 {
+	font-size: 1.5em;
 }
