--- a/app/styles/utilities/_utils.scss
+++ b/app/styles/utilities/_utils.scss
@@ -10,8 +10,39 @@
 	background-size: 16px 16px;
 }
 
+// Mixins
+// -----------------------------------------------------------------------------
+@mixin flip {
+	position: relative;
+	z-index: 1;
+	@include perspective(1000);
+
+	&:hover {
+		.content {
+			@include transform(rotateY(180deg));
+		}
+	}
+  .content {
+		width: 100%;
+		height: 100%;
+		@include transform-style(preserve-3d);
+		@include transition(all 0.5s linear);
+  }
+	.face {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		@include backface-visibility(hidden);
+
+		&.back {
+			transform: rotateY(180deg);
+			@include box-sizing(border-box);
+		}
+	}
+}
+
 // Functions
 // -----------------------------------------------------------------------------
 @function em ($value) {
-	@return ($value / $base-font-size) + 0rem;
+	@return ($value / $base-font-size) + 0em;
 }
