--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,6 +16,7 @@
 
 // Vendor Libraries
 // ------------------------------------------------------------------------------
+@import "susy";
 
 // Web fonts
 // ------------------------------------------------------------------------------
