--- a/app/styles/molecules/_header.scss
+++ b/app/styles/molecules/_header.scss
@@ -1,13 +1,15 @@
 header {
 	font-size: 2rem;
-	background: $base-background-color image-url('header.jpg') no-repeat 0 100%;
+	position: relative;
+	height: 25em;
+	background: image-url('header.jpg') no-repeat;
 	background-size: cover;
-	@include box-shadow(inset 0 0 2em 0px $white);
+	border-bottom: 5px solid $base-border-color;
 
 	h1 {
-		padding: 2.5em 0 0.5em;
-		color: $white;
-		text-align: center;
-		background-color: rgba($white, 0.1);
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		padding: 10% 15%;
 	}
 }
