Added text shadowing and font aliasing

--- a/app/styles/molecules/_skill.scss
+++ b/app/styles/molecules/_skill.scss
@@ -22,4 +22,7 @@
 	.image-pianist {
 		background-image: image-url('skills/pianist.jpg');
 	}
+	.image-director {
+		background-image: image-url('skills/music.jpg');
+	}
 }
