--- a/app/styles/atoms/_section-header.scss
+++ b/app/styles/atoms/_section-header.scss
@@ -4,6 +4,7 @@
 	margin: 1em 0;
 
 	h2 {
-		@include text-highlight($black);
+		// @include text-highlight($black);
+		@include long-text-shadow (5, rgba($black,0.3));
 	}
 }
