--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,6 +17,7 @@
 // Vendor Libraries
 // ------------------------------------------------------------------------------
 @import "susy";
+@import "font-awesome";
 
 // Web fonts
 // ------------------------------------------------------------------------------
