--- a/app/styles/_config.scss
+++ b/app/styles/_config.scss
@@ -42,6 +42,10 @@ $base-link-color: $orange;
 /////// Config defaults for buttons ///////
 // -----------------------------------------------------------------------------
 
+/////// Config for Font Awesome ///////
+// -----------------------------------------------------------------------------
+$fa-font-path: "/bower_components/font-awesome/fonts";
+
 /////// Config for Susy grid ///////
 // -----------------------------------------------------------------------------
 $total-columns: 12;
