--- a/app/styles/molecules/_header.scss
+++ b/app/styles/molecules/_header.scss
@@ -4,7 +4,7 @@ header {
 	height: 25em;
 	background: image-url('header.jpg') no-repeat;
 	background-size: cover;
-	border-bottom: 5px solid $base-border-color;
+	@include large-border(bottom);
 
 	h1 {
 		position: absolute;
