Added photo library

--- a/app/styles/_config.scss
+++ b/app/styles/_config.scss
@@ -26,6 +26,10 @@ $default-border-width: 1px;
 $default-border-style: solid;
 $default-border-color: $beige;
 
+$photo-border-width: 10px;
+$photo-border-style: double;
+$photo-border-color: $default-border-color;
+
 $large-border-width: 5px;
 
 $default-box-shadow-h-offset: 2px;
