--- a/app/styles/templates/_index.scss
+++ b/app/styles/templates/_index.scss
@@ -7,7 +7,7 @@
 }
 
 #video, #audio, #photo {
-	margin-bottom: $gutter-width;
+	margin-bottom: $gutter-width * 3;
 
 	h2 {
 		margin: 0 0 $gutter-width;
