--- a/app/styles/templates/_index.scss
+++ b/app/styles/templates/_index.scss
@@ -6,7 +6,7 @@
 	margin-bottom: $default-page-spacing;
 }
 
-#video, #audio, #photo {
+#video, #audio, #photo, #schedule {
 	margin-bottom: $gutter-width * 3;
 
 	h2 {
