--- a/app/styles/molecules/_nav.scss
+++ b/app/styles/molecules/_nav.scss
@@ -15,6 +15,7 @@
 		font-size: 3em;
 		@include equal-columns(4);
 		background-color: $secondary-background-color;
+		@include border-radius;
 
 		&.active {
 			background-color: $default-text-color;
