--- a/app/styles/_config.scss
+++ b/app/styles/_config.scss
@@ -51,7 +51,7 @@ $default-box-shadow-h-offset: 2px;
 $default-box-shadow-v-offset: 2px;
 $default-box-shadow-blur: 5px;
 $default-box-shadow-spread: -1px;
-$default-box-shadow-color: rgba($black, 0.8);
+$default-box-shadow-color: rgba($primary-color, 0.8);
 
 /////// Page dimension configuration ///////
 // -----------------------------------------------------------------------------
@@ -78,10 +78,15 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 $total-columns: 12;
 $column-width: 5rem;
 $gutter-width: 1rem;
-$grid-padding: 0;
+$grid-padding: $gutter-width;
+
+$medium-columns: 6;
+$large-columns: 12;
 
 /////// UI @media breakpoint defaults ///////
 // -----------------------------------------------------------------------------
+$medium-viewport: 30em $medium-columns;
+$large-viewport: 60em $large-columns;
 
 /////// Site Icons and Images ///////
 // -----------------------------------------------------------------------------
