--- a/app/styles/molecules/_header.scss
+++ b/app/styles/molecules/_header.scss
@@ -1,10 +1,18 @@
 header {
-	font-size: 2rem;
+	font-size: 1rem;
 	position: relative;
-	height: 25em;
+	height: 15em;
 	background: image-url('header.jpg') no-repeat;
 	background-size: cover;
 	@include large-border(bottom);
+	@include at-breakpoint($medium-viewport) {
+		font-size: 1.5rem;
+		height: 20em;
+	}
+	@include at-breakpoint($large-viewport) {
+		font-size: 2rem;
+		height: 25em;
+	}
 
 	h1 {
 		position: absolute;
