--- a/app/styles/utilities/_utils.scss
+++ b/app/styles/utilities/_utils.scss
@@ -12,49 +12,9 @@
 
 /////// Helper Classes ///////
 // -----------------------------------------------------------------------------
-%card {
-	@include border-radius;
-	@include box-sizing(border-box);
-	background-color: $secondary-background-color;
-	overflow: hidden;
-	@include box-shadow;
-}
-
-.container {
-	@include container;
-}
 
 /////// Mixins ///////
 // -----------------------------------------------------------------------------
-@mixin flip {
-	position: relative;
-	z-index: 1;
-	@include perspective(1000);
-
-	&:hover {
-		.content {
-			@include transform(rotateY(180deg));
-		}
-	}
-  .content {
-		width: 100%;
-		height: 100%;
-		@include transform-style(preserve-3d);
-		@include transition(all 0.3s linear);
-  }
-	.face {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		@include backface-visibility(hidden);
-
-		&.back {
-			transform: rotateY(180deg);
-			@include box-sizing(border-box);
-		}
-	}
-}
-
 @mixin text-highlight ($color) {
 	text-shadow: 1px 1px 0px $color;
 }
@@ -104,6 +64,9 @@
 // -----------------------------------------------------------------------------
 @mixin equal-columns ($columns: 1) {
 	@include span-columns($total-columns / $columns);
+	@for $i from 1 through $columns {
+		@include remove-nth-omega(#{$i}n);
+	}
 	@include nth-omega(#{$columns}n);
 }
 
@@ -111,4 +74,8 @@
 // -----------------------------------------------------------------------------
 @function em ($value) {
 	@return ($value / $base-font-size) + 0em;
+}
+
+@function strip-units ($number) {
+  @return $number / ($number * 0 + 1);
 }
