--- a/app/styles/templates/_schedule.scss
+++ b/app/styles/templates/_schedule.scss
@@ -7,9 +7,11 @@
 			background-color: rgba($default-background-color, 0.4);
 		}
 		.meta {
+			font-size: 0.8em;
 			margin-bottom: $gutter-width;
 			@include at-breakpoint($medium-viewport) {
 				@include span-columns(4, 12);
+				font-size: 1em;
 				margin-bottom: 0;
 			}
 
@@ -23,8 +25,8 @@
 			}
 
 			.title {
-				font-size: 1.3em;
 				font-weight: bold;
+				margin-bottom: 0.2em;
 			}
 		}
 	}
