--- a/app/styles/_config.scss
+++ b/app/styles/_config.scss
@@ -61,6 +61,7 @@ $default-page-spacing: 3em;
 // -----------------------------------------------------------------------------
 $primary-font: serif;
 $secondary-font: "Ostrich", "Helvetica Nueue", Helvetica, Arial, sans-serif;
+$quote-font: "Janda Quirky Girl", serif;
 
 $base-font-size: 16px;
 $small-font-size: 12px;
