--- a/app/styles/quarks/_text.scss
+++ b/app/styles/quarks/_text.scss
@@ -1,4 +1,10 @@
 p {
 	margin: 0;
-	font-size: 1.2em;
+	font-size: 1em;
+	line-height: 1.4em;
+}
+
+pre {
+	font-family: $primary-font;
+	margin: 0;
 }
