--- a/app/styles/quarks/_quote.scss
+++ b/app/styles/quarks/_quote.scss
@@ -1,15 +1,23 @@
 blockquote {
 	margin: 0;
 	position: relative;
+	font-size: 1.2em;
 
 	&:before {
 		content: "\"";
 		font-family: $quote-font;
-		font-size: 15em;
+		font-size: 10em;
 		line-height: 0;
 		position: absolute;
 		top: 0.3em;
 		left: -0.2em;
 		opacity: 0.1;
 	}
+}
+
+cite {
+	display: block;
+	font-size: 0.8em;
+	margin-top: 0.5em;
+	font-style: normal;
 }
