--- a/app/styles/templates/_schedule.scss
+++ b/app/styles/templates/_schedule.scss
@@ -1,9 +1,11 @@
 #schedule {
+	@include container;
+
 	.schedule--entry {
 		@include container;
 		padding: 1em;
 
-		&:nth-child(2n-1) {
+		&:nth-child(2n) {
 			background-color: rgba($default-background-color, 0.4);
 		}
 		.meta {
